# CRF_Edge

./: LICENSE  README.md  annotation_engine.py  annotation_engine_ohne_arrow.py  cli.py  crf.yaml  crf_detections.ipynb  crf_edge_pipeline.md  crf_logger.cpp  crf_logger.hpp  crf_on_edge.ipynb  crf_with_annotation.py  dummy_crf_generator.py  pdf_to_images.py  pytorch_setup.md  register_crf.py  run_inference.ipynb  schema.json  split_the_training_data.py  test_data_dummy.py  test_inference.ipynb  todo.md  train_crf(1).ipynb  train_crf.ipynb  train_crf.py
CRF/: crf_dummy.7z
crf_config/: CMakeLists.txt  config.yaml  crf_config.cpp  crf_config.hpp  main.cpp
crf_docker_ui/: Dockerfile  README.md  index.html  package.json  run.sh
crf_docker_ui/src/: App.jsx  theme.js
crf_docker_ui/src/components/: CrfViewer.jsx  DataGridTable.jsx  PDFInputViewer.jsx  PdfViewer.jsx
crf_inference/: crf_inference.cpp  crf_inference.hpp
crf_ui/: Readme.md
crf_ui/backend/: main.py  run.sh  sample.json
crf_ui/frontend/: package-lock.json
crf_ui/frontend/src/: App.jsx
crf_ui/frontend/src/api/: backend.js
crf_ui/frontend/src/components/: CrfViewer.jsx  Header.jsx  PdfViewer.jsx
crf_ui/frontend/src/layouts/: MainLayout.jsx
